--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "api",
+  "name": "node-rest-api",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "npx nodemon app.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Sonat Saygın İpek",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2"
