--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Sonat Saygın İpek",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "joi": "^17.10.2"
   }
 }
