--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Sonat Saygın İpek",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "joi": "^17.10.2"
   }
